修复寻路，堵塞，结束不能探索约5秒，单人测试基本通过，多人优化没做